--- a/hw3/package.json
+++ b/hw3/package.json
@@ -14,7 +14,8 @@
     "jade": "~1.11.0",
     "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.7.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "jest": "^29.7.0"
